force-app/main/default/objects/Territory__c/fields/ABN_ACN__c.field-meta.xml
<CustomField>
    <fullName>ABN_ACN__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Display ABN/ACN of territory</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ABN/ACN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>