force-app/main/default/objects/Territory__c/fields/Access_Scope__c.field-meta.xml
<CustomField>
    <fullName>Access_Scope__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Scope of data visibility</description>
    <label>Access Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
                <default>true</default>
                <label>Restricted</label>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>