force-app/main/default/objects/Territory__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Display Business Name of territory</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>