force-app/main/default/objects/Territory__c/fields/Primary_Franchise_Owner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Franchise_Owner__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store information related to primary owner franchise</description>
    <label>Primary Franchise Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>