force-app/main/default/objects/Territory__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Code of the Territory</description>
    <displayFormat>T-{0000}</displayFormat>
    <label>Territory Code</label>
    <type>AutoNumber</type>
</CustomField>