force-app/main/default/objects/Territory__c/fields/TPMI__c.field-meta.xml
<CustomField>
    <fullName>TPMI__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Third Party Mortgage Introducer reference number</description>
    <label>TPMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>