force-app/main/default/objects/Territory__c/validationRules/MLCRM_Primary_Franchise_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MLCRM_Primary_Franchise_Required</fullName>
    <active>true</active>
    <description>This validation rule is used to make primary franchise owner field required</description>
    <errorConditionFormula>isBlank(Primary_Franchise_Owner__c)</errorConditionFormula>
    <errorDisplayField>Primary_Franchise_Owner__c</errorDisplayField>
    <errorMessage>Primary franchise owner is required</errorMessage>
</ValidationRule>